--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "finnhub": "^1.2.7",
     "html-to-react": "^1.4.7",
     "react": "^17.0.2",
+    "react-axios": "^2.0.5",
     "react-dom": "^17.0.2",
     "react-icons": "^4.3.1",
     "react-router-dom": "^6.0.0",
