--- a/.env
+++ b/.env
@@ -1,3 +1,7 @@
 REACT_APP_API_KEY=29dfc0019dmsh502359a63439b28p163e64jsn6db8a8398709
 
 SKIP_PREFLIGHT_CHECK=true
+
+
+REACT_APP_AUTH0_DOMAIN=dev-icildp4r.us.auth0.com
+REACT_APP_AUTH0_CLIENT_ID=S2WUgwPfvxph3vM34S10lp6DPOft3xrQ
